<resources>
    <string name="app_name">IndoorNavigation</string>

    <string name="action_ok">OK</string>

    <string name="floor">Floor</string>
    <string name="wall">Wall</string>
    <string name="stairs">Stairs</string>
    <string name="door">Door</string>
    <string name="elevator">Elevator</string>
    <string name="room">Room</string>
    <string name="legend">Legend</string>

    <string name="title_progress_path">Path</string>
    <string name="progress_looking_path">Looking for shortest path. Please wait</string>
    <string name="toolbar_title_floor">Current floor : %s</string>

    <string name="splash_loading_text">Loading map. Please wait</string>
    <string name="unknown_position">unknown</string>
</resources>
