<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/legend_dialog_margin_bottom">

        <ImageView
            android:layout_width="@dimen/legend_dialog_color_size"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:src="@color/wallColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:paddingStart="@dimen/legend_dialog_margin_bottom"
            android:text="@string/wall"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/legend_dialog_margin_bottom">

        <ImageView
            android:layout_width="@dimen/legend_dialog_color_size"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:src="@color/doorColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:paddingStart="@dimen/legend_dialog_margin_bottom"
            android:text="@string/door"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/legend_dialog_margin_bottom">

        <ImageView
            android:layout_width="@dimen/legend_dialog_color_size"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:src="@color/roomColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:paddingStart="@dimen/legend_dialog_margin_bottom"
            android:text="@string/room"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/legend_dialog_margin_bottom">

        <ImageView
            android:layout_width="@dimen/legend_dialog_color_size"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:src="@color/stairsColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:paddingStart="@dimen/legend_dialog_margin_bottom"
            android:text="@string/stairs"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/legend_dialog_margin_bottom">

        <ImageView
            android:layout_width="@dimen/legend_dialog_color_size"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:src="@color/elevatorColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/legend_dialog_color_size"
            android:paddingStart="@dimen/legend_dialog_margin_bottom"
            android:text="@string/elevator"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>